2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* Session.cs: Nicer code path.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* Engine.mdp, Chats/ChatType.cs, Chats/ProtocolChatModel.cs,
	  Chats/NetworkChatModel.cs: Renamed confusing NetworkChatModel to
	  ProtocolChatModel and ChatType.Network to ChatType.Protocol.

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.31

2008-03-04  Mirco Bauer <meebey@meebey.net> 

	* Protocols/ProtocolManagerFactory.cs: Skip abstract classes that implement
	  IProtocolManager.

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Session.cs: Implemented SessionChat*, abusing NetworkChat* as smuxi chat
	  was a dirty hack.
	
	  Register ProtocolManagers when connecting automatically to servers.
	
	* Chats/ChatModel.cs: Fixed indention.
	* Chats/ChatType.cs, Chats/SessionChatModel.cs: Implemented SessionChat*,
	  abusing NetworkChat* as smuxi chat was a dirty hack.

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/ProtocolManagerBase.cs: Fixed highlight, formatting and colors
	  of messages that contain URLs.

2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/ProtocolManagerBase.cs: Fixed parsing of URLs.

2008-01-31  Mirco Bauer <meebey@meebey.net> 

	* Session.cs, FrontendManager.cs: Deregister the FrontendManager by using
	  the FrontendManager instance instead of the remoting URI which caused an
	  unhandled exception. The the UI object is usually unusable in that stage
	  (the frontend is disconnected), this fixes the crash bug with Mono 1.2.6
	  after a frontend disconnects.
	* AssemblyInfo.cs: Bumped version to 0.5.30.

2007-12-25  Mirco Bauer <meebey@meebey.net> 

	* Engine.mdp: Updated using MonoDevelop 0.18.1
