@@ -85,6 +85,18 @@ namespace Smuxi.Engine
             get;
         }
         
+        public virtual IList<ChatModel> Chats {
+            get {
+                IList<ChatModel> chats = new List<ChatModel>();
+                foreach (ChatModel chat in _Session.Chats) {
+                    if (chat.ProtocolManager == this) {
+                        chats.Add(chat);
+                    }
+                }
+                return chats;
+            }
+        }
+        
         protected Session Session {
             get {
                 return _Session;
@@ -106,17 +118,7 @@ namespace Smuxi.Engine
         {
             Trace.Call();
             
-            // remove all open chats (including protocol chat if exists)
-            // we can't delete directly, it will break the enumerator, let's use a list
-            List<ChatModel> removelist = new List<ChatModel>();
-            foreach (ChatModel chat in _Session.Chats) {
-                if (chat.ProtocolManager == this) {
-                    removelist.Add(chat);
-                }
-            }
-            
-            // now we can delete
-            foreach (ChatModel chat in removelist) {
+            foreach (ChatModel chat in Chats) {
                 _Session.RemoveChat(chat);
             }
         }
