@@ -1,3 +1,8 @@
+2008-06-25  Mirco Bauer <meebey@meebey.net> 
+
+	* Protocols/IProtocolManager.cs, Protocols/ProtocolManagerBase.cs: Expose
+	  chats owned by the protocol manager.
+
 2008-06-02  Mirco Bauer <meebey@meebey.net> 
 
 	* Session.cs: Nicer code path.
